--- a/index.html
+++ b/index.html
@@ -47,13 +47,12 @@
     }
 
 
-    .header__inner {
+    .header__logo {
         display: flex;
         justify-content: space-between;
-    }
-
-    .h1 {
-        width: 542px;
+        margin: 15px;
+        align-items: center;
+        padding-top: 30px;
     }
 </style>
 
@@ -67,12 +66,21 @@
                         <input class="nav__input" type="button" value="корзина">
                     </nav>
                 </div>
-
             </div>
         </div>
     </header>
     <div class="intro">
         <div class="container">
+            <saidbar>
+                <div class="saidbar-text">
+                    <div class="container">
+                        <h1>Виртуальная реальность без проводов</h1>
+                        <p>Лучшее, что случалось с виртуальным миром в реальности. Новый компактный шлем без проводов и
+                            дорогих
+                            комьютеров.</p>
+                    </div>
+                </div>
+            </saidbar>
 
 
         </div>
