--- a/index.html
+++ b/index.html
@@ -53,6 +53,21 @@
         margin: 15px;
         align-items: center;
         padding-top: 30px;
+
+    }
+
+
+
+    .footer-href {
+
+        color: #5222D0;
+        width: 139px;
+        height: 32px;
+        left: 126px;
+        top: 788px;
+        justify-content: stretch;
+
+
     }
 </style>
 
@@ -81,18 +96,20 @@
                     </div>
                 </div>
             </saidbar>
-
-
+        </div>
+    </div>
+    </div>
+    <footer>
+        <div class="">
+            <a class="footer-href" href="#">Возможности</a>
+            <a class="footer-href" href="#">Где купить</a>
+            <a class="footer-href" href="#">Доставка</a>
+            <a class="footer-href" href="#">Помощь</a>
         </div>
 
-    </div>
 
 
-    </div>
-
-    <section>
-
-    </section>
+    </footer>
 </body>
 
 </html>
