--- a/index.html
+++ b/index.html
@@ -54,20 +54,33 @@
         align-items: center;
         padding-top: 30px;
 
+
     }
 
 
 
     .footer-href {
+        text-decoration: none;
+        padding: 4px;
 
         color: #5222D0;
-        width: 139px;
-        height: 32px;
+        width: 487px;
+        height: 96px;
         left: 126px;
-        top: 788px;
-        justify-content: stretch;
+        top: 432px;
 
+        font-family: Roboto Slab;
+        font-style: normal;
+        font-weight: 300;
+        font-size: 15px;
+        line-height: 160%;
+        margin: 20px;
 
+    }
+
+    .b1 {
+        background-color: blue;
+        color: white;
     }
 </style>
 
@@ -78,7 +91,7 @@
                 <div class="header__logo">
                     <img src="assets/imaje/logo.png" alt="logo">
                     <nav class="nav">
-                        <input class="nav__input" type="button" value="корзина">
+                        <button class="b1">Корзина</button>
                     </nav>
                 </div>
             </div>
@@ -89,8 +102,9 @@
             <saidbar>
                 <div class="saidbar-text">
                     <div class="container">
-                        <h1>Виртуальная реальность без проводов</h1>
-                        <p>Лучшее, что случалось с виртуальным миром в реальности. Новый компактный шлем без проводов и
+                        <h1 aline="left">Виртуальная <br> реальность без <br> проводов</h1>
+                        <p>Лучшее, что случалось с виртуальным миром <br> в реальности. Новый компактный шлем <br> без
+                            проводов и
                             дорогих
                             комьютеров.</p>
                     </div>
@@ -100,11 +114,12 @@
     </div>
     </div>
     <footer>
-        <div class="">
-            <a class="footer-href" href="#">Возможности</a>
-            <a class="footer-href" href="#">Где купить</a>
-            <a class="footer-href" href="#">Доставка</a>
-            <a class="footer-href" href="#">Помощь</a>
+        <div class="container"></div>
+
+        <a class="footer-href" href="#">Возможности</a>
+        <a class="footer-href" href="#">Где купить</a>
+        <a class="footer-href" href="#">Доставка</a>
+        <a class="footer-href" href="#">Помощь</a>
         </div>
 
 
