--- a/index.html
+++ b/index.html
@@ -82,6 +82,14 @@
         background-color: blue;
         color: white;
     }
+
+    .saidbar-text {
+
+        position: absolute;
+        text-align: left;
+        padding: 30px 0 0 0;
+        margin: 15px;
+    }
 </style>
 
 <body>
@@ -100,8 +108,9 @@
     <div class="intro">
         <div class="container">
             <saidbar>
-                <div class="saidbar-text">
-                    <div class="container">
+                <div class="container">
+                    <div class="saidbar-text">
+
                         <h1 aline="left">Виртуальная <br> реальность без <br> проводов</h1>
                         <p>Лучшее, что случалось с виртуальным миром <br> в реальности. Новый компактный шлем <br> без
                             проводов и
