--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     .header__logo {
         display: flex;
         justify-content: space-between;
-        margin: 15px;
+
         align-items: center;
         padding-top: 30px;
 
@@ -87,8 +87,19 @@
 
         position: absolute;
         text-align: left;
-        padding: 30px 0 0 0;
-        margin: 15px;
+        padding: 150px 0 0 0;
+
+    }
+
+    .saidbar-text__b1 {
+
+        background-color: blueviolet;
+        color: white;
+        border-radius: 15px;
+        padding: 10px 10px;
+        margin: 0 auto;
+
+
     }
 </style>
 
@@ -116,6 +127,8 @@
                             проводов и
                             дорогих
                             комьютеров.</p>
+                        <button class="saidbar-text__b1">Купить
+                            <img src="assets/imaje/Rectangle 3.png"> </button>
                     </div>
                 </div>
             </saidbar>
@@ -130,10 +143,24 @@
         <a class="footer-href" href="#">Доставка</a>
         <a class="footer-href" href="#">Помощь</a>
         </div>
-
-
-
     </footer>
+
+
+    <div>
+        <div class="header__logo">
+            <img src="assets/imaje/logo.png" alt="logo">
+            <nav class="nav">
+                <button class="b1">Корзина</button>
+        </div>
+        <div class="column">
+            <h2>gukktglg</h2>
+            <div>Без проводов</div>
+            <div>Без компьютера</div>
+            <div>До 10 часов работы</div>
+            <div>Сотни игр</div>
+            <div>Почти даром</div>
+
+        </div>
 </body>
 
 </html>
