--- a/index.html
+++ b/index.html
@@ -98,8 +98,26 @@
         border-radius: 15px;
         padding: 10px 10px;
         margin: 0 auto;
+    }
 
+    .block {
+        max-width: 1400px;
+        min-width: 450px;
+        margin: 0 auto;
+    }
 
+    .block__column {
+        display: grid;
+        float: left;
+        width: 16%;
+
+        padding: 20px;
+        margin: 20px;
+    }
+
+    .vrapper {
+        float: left;
+        width: 25%;
     }
 </style>
 
@@ -152,13 +170,31 @@
             <nav class="nav">
                 <button class="b1">Корзина</button>
         </div>
-        <div class="column">
+        <div class="block">
             <h2>gukktglg</h2>
-            <div>Без проводов</div>
-            <div>Без компьютера</div>
-            <div>До 10 часов работы</div>
-            <div>Сотни игр</div>
-            <div>Почти даром</div>
+            <div class="vrapper">
+                <div class="block__column">Без проводов Шлем работает без проводов. Не нужен ни компьютер, ни внешнее
+                    питание, ни большое помещение, чтобы расставить трекеры.</div>
+            </div>
+            <div class="vrapper">
+                <div class="block__column">Без компьютера Современным VR-шлемам нужен мощный компьютер, чтобы запускать
+                    игры. Наш шлем запускает игры из облака, поэтому просто наслаждайтесь</div>
+            </div>
+            <div class="vrapper">
+                <div class="block__column">До 10 часов работы Несмотря на компактность и производительность, шлем может
+                    работать до 10 часов — даже, если вы играете в самые ресурсоемкие игры.</div>
+            </div>
+            <div class="vrapper">
+                <div class="block__column">Сотни игр Уже сейчас вам доступно более сотни игр: от высокобюджетных
+                    ААА-тайтлов до маленьких независимых проектов. Скоро их станет еще больше.</div>
+            </div>
+            <div class="vrapper">
+                <div class="block__column">Почти даром По сравнению с другими VR-шлемами наш стоит гораздо меньше. И вы
+                    существенно экономите на мощном компьютере.</div>
+            </div>
+            <div class="vrapper">
+                <div class="block__column"> Формовый</div>
+            </div>
 
         </div>
 </body>
