--- a/index.html
+++ b/index.html
@@ -126,6 +126,12 @@
     .block__column-imj {
         background-color: tomato;
     }
+
+    .h2 {
+        display: inline;
+        width: 45%;
+
+    }
 </style>
 
 <body>
@@ -161,12 +167,12 @@
     </div>
     </div>
     <footer>
-        <div class="container"></div>
+        <div class="container">
 
-        <a class="footer-href" href="#">Возможности</a>
-        <a class="footer-href" href="#">Где купить</a>
-        <a class="footer-href" href="#">Доставка</a>
-        <a class="footer-href" href="#">Помощь</a>
+            <a class="footer-href" href="#">Возможности</a>
+            <a class="footer-href" href="#">Где купить</a>
+            <a class="footer-href" href="#">Доставка</a>
+            <a class="footer-href" href="#">Помощь</a>
         </div>
     </footer>
 
@@ -178,9 +184,9 @@
                 <button class="b1">Корзина</button>
         </div>
         <div class="block">
-            <h2>gukktglg</h2>
-            <div class="vrapper">
+            <h2>Возможности</h2>
 
+            <div class="vrapper">
                 <div class="block__column">
                     <div class="block__column-imj"><img src="assets/imaje/praktikum1 1.png" width="90" height="70">
                     </div>
@@ -191,21 +197,32 @@
                 </div>
             </div>
             <div class="vrapper">
-                <div class="block__column-imj"><img src="assets/imaje/praktikum2 1 (1).png" </div> <div
-                        class="block__column">Без компьютера Современным VR-шлемам нужен мощный компьютер, чтобы
+                <div class="block__column">
+                    <div class="block__column-imj"><img src="assets/imaje/praktikum2 1 (1).png" width="90" height="70">
+                    </div>
+                    <b>Без компьютера</b> Современным VR-шлемам нужен мощный компьютер, чтобы
                     запускать
-                    игры. Наш шлем запускает игры из облака, поэтому просто наслаждайтесь</div>
+                    игры. Наш шлем запускает игры из облака, поэтому просто наслаждайтесь
+                </div>
             </div>
+
             <div class="vrapper">
-                <div class="block__column">До 10 часов работы Несмотря на компактность и производительность, шлем может
-                    работать до 10 часов — даже, если вы играете в самые ресурсоемкие игры.</div>
+                <div class="block__column">
+                    <div class="block__column-imj"><img src="assets/imaje/praktikum3 1.png" width="90" height="70">
+                    </div><b>До 10
+                        часов работы</b> Несмотря
+                    на компактность и производительность, шлем
+                    может
+                    работать до 10 часов — даже, если вы играете в самые ресурсоемкие игры.
+                </div>
             </div>
             <div class="vrapper">
                 <div class="block__column">Сотни игр Уже сейчас вам доступно более сотни игр: от высокобюджетных
                     ААА-тайтлов до маленьких независимых проектов. Скоро их станет еще больше.</div>
             </div>
             <div class="vrapper">
-                <div class="block__column">Почти даром По сравнению с другими VR-шлемами наш стоит гораздо меньше. И вы
+                <div class="block__column">Почти даром По сравнению с другими VR-шлемами наш стоит гораздо меньше. И
+                    вы
                     существенно экономите на мощном компьютере.</div>
             </div>
             <div class="vrapper">
