работа над колонками

--- a/index.html
+++ b/index.html
@@ -127,11 +127,7 @@
         background-color: tomato;
     }
 
-    .h2 {
-        display: inline;
-        width: 45%;
-
-    }
+    .h2 {}
 </style>
 
 <body>
@@ -183,12 +179,13 @@
             <nav class="nav">
                 <button class="b1">Корзина</button>
         </div>
+        <h2>Возможности</h2>
         <div class="block">
-            <h2>Возможности</h2>
+
 
             <div class="vrapper">
                 <div class="block__column">
-                    <div class="block__column-imj"><img src="assets/imaje/praktikum1 1.png" width="90" height="70">
+                    <div class="block__column-imj"><img src="assets/imaje/praktikum1 1.png" width="90" height="80">
                     </div>
                     <b>Без проводов</b> Шлем работает
                     без проводов. Не нужен ни компьютер, ни
@@ -198,7 +195,7 @@
             </div>
             <div class="vrapper">
                 <div class="block__column">
-                    <div class="block__column-imj"><img src="assets/imaje/praktikum2 1 (1).png" width="90" height="70">
+                    <div class="block__column-imj"><img src="assets/imaje/praktikum2 1 (1).png" width="90" height="80">
                     </div>
                     <b>Без компьютера</b> Современным VR-шлемам нужен мощный компьютер, чтобы
                     запускать
@@ -208,7 +205,7 @@
 
             <div class="vrapper">
                 <div class="block__column">
-                    <div class="block__column-imj"><img src="assets/imaje/praktikum3 1.png" width="90" height="70">
+                    <div class="block__column-imj"><img src="assets/imaje/praktikum3 1.png" width="90" height="80">
                     </div><b>До 10
                         часов работы</b> Несмотря
                     на компактность и производительность, шлем
@@ -217,19 +214,35 @@
                 </div>
             </div>
             <div class="vrapper">
-                <div class="block__column">Сотни игр Уже сейчас вам доступно более сотни игр: от высокобюджетных
+                <div class="block__column"><b>Сотни игр</b><br> Уже сейчас вам доступно более сотни игр: от
+                    высокобюджетных
                     ААА-тайтлов до маленьких независимых проектов. Скоро их станет еще больше.</div>
             </div>
             <div class="vrapper">
-                <div class="block__column">Почти даром По сравнению с другими VR-шлемами наш стоит гораздо меньше. И
+                <div class="block__column"><b>Почти даром</b><br> По сравнению с другими VR-шлемами наш стоит гораздо
+                    меньше. И
                     вы
                     существенно экономите на мощном компьютере.</div>
             </div>
             <div class="vrapper">
-                <div class="block__column"> Формовый</div>
-            </div>
+                <div class="block__column">
+                    <div class="block__column-imj"> Новости
+                        <input type="text" value="Эл. почта">
+                        <button class="saidbar-text__b1">Подписаться</button>
 
-        </div>
+                    </div>
+                </div>
+            </div>
+            <footer>
+                <div class="container">
+
+                    <a class="footer-href" href="#">Возможности</a>
+                    <a class="footer-href" href="#">Где купить</a>
+                    <a class="footer-href" href="#">Доставка</a>
+                    <a class="footer-href" href="#">Помощь</a>
+                </div>
+            </footer>
+
 
 
 
